--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Itamar Shapira | Software Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -36,13 +36,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is  <span class="text-color-main">Itamar Shapira</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Software Developer .
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Hire Me</a
           >
         </p>
       </div>
@@ -69,12 +69,12 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I am a third-year B.Sc. Computer Science student with expertise in Java, JavaScript, C++, and Python. Currently, I am completing an internship at <strong>F&G Detection</strong>, where I contribute to R&D projects focused on innovative solutions in the defense and health sectors.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I am passionate about applying computer vision technologies to real-world challenges in these fields. In addition, I have extensive experience teaching physical fitness, specializing in Kinesiology, Anatomy, and Exercise Science, having served as both a lecturer and trainer.
               </p>
+              
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
