heart disease project 1

--- a/src/index.html
+++ b/src/index.html
@@ -162,21 +162,27 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Heart Disease Risk Prediction with Machine Learning</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    This project explores the use of various <strong>Python-based machine learningand data science libraries to develop a model
+                     capable of predicting heart disease based on medical attributes</strong>. Using a comprehensive workflow in <strong>Jupyter Notebook
+                       within a Miniconda environment </strong>
+                     , I leveraged <strong>Pandas</strong> and <strong>NumPy</strong>  for efficient data handling, <strong>Matplotlib and Seaborn</strong> for
+                      creating insightful visualizations, and the powerful <strong>Scikit-Learn</strong>  library for model building and optimization. 
+                      This structured approach enabled me to perform thorough data analysis and develop an accurate,
+                     interpretable predictive model.
+
+
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://colab.research.google.com/github/itamarshapira/heart-disease-ml-notebook/blob/main1/end-to-end-heart-disease-classification.ipynb#scrollTo=83943af1-74d1-476c-8527-a2dd20c1c3bd&line=1&uniqifier=1"
                 >
-                  See Live
+                  Full Live Notebook 
                 </a>
                 <a
                   rel="noreferrer"
@@ -184,7 +190,7 @@
                   class="cta-btn text-color-main"
                   href="#!"
                 >
-                  Source Code
+                  Live Book
                 </a>
               </div>
             </div>
@@ -201,7 +207,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/heart-project.jpeg"
                     />
                   </div>
                 </a>
