--- a/src/index.html
+++ b/src/index.html
@@ -165,13 +165,13 @@
                 <h3 class="project-wrapper__text-title">Heart Disease Risk Prediction with Machine Learning</h3>
                 <div>
                   <p class="mb-4">
-                    This project explores the use of various <strong>Python-based machine learningand data science libraries to develop a model
-                     capable of predicting heart disease based on medical attributes</strong>. Using a comprehensive workflow in <strong>Jupyter Notebook
-                       within a Miniconda environment </strong>
-                     , I leveraged <strong>Pandas</strong> and <strong>NumPy</strong>  for efficient data handling, <strong>Matplotlib and Seaborn</strong> for
-                      creating insightful visualizations, and the powerful <strong>Scikit-Learn</strong>  library for model building and optimization. 
-                      This structured approach enabled me to perform thorough data analysis and develop an accurate,
-                     interpretable predictive model.
+                    <p>
+                      This project uses <strong>Python-based machine learning and data science libraries</strong> to predict heart disease from medical attributes. 
+                      Implemented in <strong>Jupyter Notebook</strong> within a <strong>Miniconda environment</strong>, I utilized <strong>Pandas</strong> and <strong>NumPy</strong> for efficient data handling, 
+                      <strong>Matplotlib</strong> and <strong>Seaborn</strong> for visualizations, and <strong>Scikit-Learn</strong> for model building and optimization. 
+                      This streamlined workflow enabled thorough analysis and the creation of an accurate, interpretable model.
+                    </p>
+                    
 
 
                   </p>
@@ -188,7 +188,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://heart-disease-book.netlify.app"
                 >
                   Live Book
                 </a>
