--- a/src/index.html
+++ b/src/index.html
@@ -70,10 +70,11 @@
             <div class="about-wrapper__info load-hidden">
 
               <p class="about-wrapper__info-text">
-                I am a third-year B.Sc. Computer Science student with expertise in Java, JavaScript, C++, and Python. Currently, I am completing an internship at <strong>F&G Detection</strong>, where I contribute to R&D projects focused on innovative solutions in the defense and health sectors.
+                I am a third-year B.Sc. Computer Science student. Currently, I am completing an internship at <strong>F&G Detection</strong>, where I contribute to R&D projects focused on innovative solutions in the defense and health sectors.
               </p>
               <p class="about-wrapper__info-text">
-                I am passionate about applying computer vision technologies to real-world challenges in these fields. 
+                I am passionate passionate about leveraging Machine Learning and Computer
+                Vision to drive innovation in the Defense, Health, and Sports sectors. 
               </p>
 
               <p class="about-wrapper__info-text">
