--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="sports and health solutions" />
+    <meta name="description" content="Itamar Shapira | Sports and Health solutions" />
 
     <link
       rel="stylesheet"
@@ -73,7 +73,7 @@
                 I am a third-year B.Sc. Computer Science student. Currently, I am completing an internship at <strong>F&G Detection</strong>, where I contribute to R&D projects focused on innovative solutions in the defense and health sectors.
               </p>
               <p class="about-wrapper__info-text">
-                I am passionate passionate about leveraging Machine Learning and Computer
+                I am passionate about leveraging Machine Learning and Computer
                 Vision to drive innovation in the Defense, Health, and Sports sectors. 
               </p>
 
