--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="Itamar Shapira | Sports and Health solutions" />
+    <meta name="description" content="Itamar Shapira | Sports and Health Solutions" />
 
     <link
       rel="stylesheet"
@@ -197,7 +197,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://heart-disease-book.netlify.app" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -221,11 +221,11 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Final Project - SportSphere</h3>
                 <div>
                   <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
+                    <strong>Collaboration with Ofir Roditi</strong>
+                    A cutting-edge project focused on enhancing sports performance and health monitoring. Coming soon...
                   </p>
                 </div>
                 <a
