--- a/src/index.html
+++ b/src/index.html
@@ -274,6 +274,64 @@
             </div>
           </div>
           <!-- /END Project -->
+
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Bulldozer Price Prediction 🚜</h3>
+                <div>
+                  <p class="mb-4">
+                    This project leverages machine learning to predict the sale prices of bulldozers based on historical data. Using advanced regression models, it analyzes key features such as sale dates, machine attributes, and geographical data to provide accurate pricing forecasts.
+
+                      Key Features:
+                      Time Series Analysis: Incorporates trends over time to enhance predictions.
+                      Data Visualization: Includes clear and interactive charts for insights into sales patterns.
+                      Real-World Application: Designed to assist heavy equipment companies in better understanding market dynamics.
+                      Status:
+                      This project is currently under development and will soon be showcased with an interactive demo, detailed documentation, and visual insights.
+                                        </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="#!"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/bulldozer.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
         </div>
       </div>
     </section>
