--- a/src/index.html
+++ b/src/index.html
@@ -282,15 +282,12 @@
                 <h3 class="project-wrapper__text-title">Bulldozer Price Prediction 🚜</h3>
                 <div>
                   <p class="mb-4">
-                    This project leverages machine learning to predict the sale prices of bulldozers based on historical data. Using advanced regression models, it analyzes key features such as sale dates, machine attributes, and geographical data to provide accurate pricing forecasts.
+                    This project leverages machine learning to predict the sale prices of bulldozers based on historical data.
+                    Using advanced regression models, it analyzes key features such as sale dates, machine attributes, and geographical data to provide accurate pricing forecasts.
 
-                      Key Features:
-                      Time Series Analysis: Incorporates trends over time to enhance predictions.
-                      Data Visualization: Includes clear and interactive charts for insights into sales patterns.
-                      Real-World Application: Designed to assist heavy equipment companies in better understanding market dynamics.
-                      Status:
-                      This project is currently under development and will soon be showcased with an interactive demo, detailed documentation, and visual insights.
-                                        </p>
+                    Status:
+                    This project is currently under development and will soon be showcased with an interactive demo, detailed documentation, and visual insights.
+                   </p>
                 </div>
                 <a
                   rel="noreferrer"
